--- a/GDemo/ThirdViewController.xib
+++ b/GDemo/ThirdViewController.xib
@@ -44,6 +44,7 @@
 						<string key="NSFrameSize">{320, 126}</string>
 						<reference key="NSSuperview" ref="307783520"/>
 						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView" ref="809099415"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -58,13 +59,14 @@
 						<string key="NSFrame">{{20, 17}, {92, 92}}</string>
 						<reference key="NSSuperview" ref="307783520"/>
 						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView" ref="854024873"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
+						<int key="IBUIContentMode">1</int>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<int key="IBUIContentHorizontalAlignment">0</int>
 						<int key="IBUIContentVerticalAlignment">0</int>
 						<int key="IBUIButtonType">1</int>
-						<string key="IBUINormalTitle">Button</string>
 						<object class="NSColor" key="IBUIHighlightedTitleColor" id="225652992">
 							<int key="NSColorSpace">3</int>
 							<bytes key="NSWhite">MQA</bytes>
@@ -93,6 +95,7 @@
 						<string key="NSFrame">{{126, 71}, {161, 21}}</string>
 						<reference key="NSSuperview" ref="307783520"/>
 						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -135,6 +138,7 @@
 				<string key="NSFrame">{{0, 64}, {320, 416}}</string>
 				<reference key="NSSuperview"/>
 				<reference key="NSWindow"/>
+				<reference key="NSNextKeyView"/>
 				<reference key="IBUIBackgroundColor" ref="225652992"/>
 				<bool key="IBUIOpaque">NO</bool>
 				<bool key="IBUIClipsSubviews">YES</bool>
