--- a/GDemo/ThirdViewController.xib
+++ b/GDemo/ThirdViewController.xib
@@ -56,7 +56,7 @@
 					<object class="IBUIButton" id="809099415">
 						<reference key="NSNextResponder" ref="307783520"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{20, 17}, {92, 92}}</string>
+						<string key="NSFrame">{{223, 6}, {92, 92}}</string>
 						<reference key="NSSuperview" ref="307783520"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="854024873"/>
@@ -67,6 +67,7 @@
 						<int key="IBUIContentHorizontalAlignment">0</int>
 						<int key="IBUIContentVerticalAlignment">0</int>
 						<int key="IBUIButtonType">1</int>
+						<string key="IBUITitleShadowOffset">{-5, 5}</string>
 						<object class="NSColor" key="IBUIHighlightedTitleColor" id="225652992">
 							<int key="NSColorSpace">3</int>
 							<bytes key="NSWhite">MQA</bytes>
@@ -92,7 +93,7 @@
 					<object class="IBUILabel" id="854024873">
 						<reference key="NSNextResponder" ref="307783520"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{126, 71}, {161, 21}}</string>
+						<string key="NSFrame">{{223, 100}, {177, 21}}</string>
 						<reference key="NSSuperview" ref="307783520"/>
 						<reference key="NSWindow"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
@@ -102,16 +103,19 @@
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<string key="IBUIText">Label</string>
-						<reference key="IBUITextColor" ref="225652992"/>
+						<object class="NSColor" key="IBUITextColor">
+							<int key="NSColorSpace">2</int>
+							<bytes key="NSRGB">MCAwLjUwNTg4MjM4MjQgMC43NDUwOTgwNTQ0AA</bytes>
+						</object>
 						<nil key="IBUIHighlightedColor"/>
 						<int key="IBUIBaselineAdjustment">0</int>
 						<object class="IBUIFontDescription" key="IBUIFontDescription">
-							<int key="type">1</int>
-							<double key="pointSize">17</double>
+							<int key="type">2</int>
+							<double key="pointSize">16</double>
 						</object>
 						<object class="NSFont" key="IBUIFont">
-							<string key="NSName">Helvetica</string>
-							<double key="NSSize">17</double>
+							<string key="NSName">Helvetica-Bold</string>
+							<double key="NSSize">16</double>
 							<int key="NSfFlags">16</int>
 						</object>
 						<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
@@ -165,6 +169,10 @@
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 				<bool key="IBUIBouncesZoom">NO</bool>
 				<int key="IBUISeparatorStyle">1</int>
+				<object class="NSColor" key="IBUISeparatorColor">
+					<int key="NSColorSpace">1</int>
+					<bytes key="NSRGB">MC44Nzg0MzEzNzI1IDAuODc4NDMxMzcyNSAwLjg3ODQzMTM3MjUAA</bytes>
+				</object>
 				<int key="IBUISectionIndexMinimumDisplayRowCount">0</int>
 				<bool key="IBUIShowsSelectionImmediatelyOnTouchBegin">YES</bool>
 				<float key="IBUIRowHeight">44</float>
@@ -313,17 +321,6 @@
 				<object class="IBPartialClassDescription">
 					<string key="className">ThirdViewController</string>
 					<string key="superclassName">DEYRefreshTableViewController</string>
-					<object class="NSMutableDictionary" key="actions">
-						<string key="NS.key.0">nextStep:</string>
-						<string key="NS.object.0">id</string>
-					</object>
-					<object class="NSMutableDictionary" key="actionInfosByName">
-						<string key="NS.key.0">nextStep:</string>
-						<object class="IBActionInfo" key="NS.object.0">
-							<string key="name">nextStep:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-					</object>
 					<dictionary class="NSMutableDictionary" key="outlets">
 						<string key="headView">UIView</string>
 						<string key="imgBtn">EGOImageButton</string>
